--- a/code/ThriftClient/ThriftClient.csproj
+++ b/code/ThriftClient/ThriftClient.csproj
@@ -47,10 +47,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="gen-csharp\StoragePoint.cs" />
-    <Compile Include="gen-csharp\StorageService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="storage\StoragePoint.cs" />
+    <Compile Include="storage\StorageService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
