--- a/code/ThriftServer/ThriftServer.csproj
+++ b/code/ThriftServer/ThriftServer.csproj
@@ -47,11 +47,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="gen-csharp\StoragePoint.cs" />
-    <Compile Include="gen-csharp\StorageService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StorageServiceHandler.cs" />
+    <Compile Include="storage\StoragePoint.cs" />
+    <Compile Include="storage\StorageService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
